src/objects/TR1__RatePeriod__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rate Periods</relationshipLabel>
        <relationshipName>Rate_Periods1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ClosingReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Rate Periods</relationshipLabel>
        <relationshipName>Rate_Periods1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Acc:11/20:WO-008786 tie Rates to Expenses.</description>
        <label>Expense Report</label>
        <referenceTo>TR1__Expense_Report__c</referenceTo>
        <relationshipLabel>Rate Periods</relationshipLabel>
        <relationshipName>Rate_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Rate Periods</relationshipLabel>
        <relationshipName>Rate_Periods1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Rate Periods</relationshipLabel>
        <relationshipName>Rate_Periods1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate Period</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Rate Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Periods</pluralLabel>
    <recordTypes>
        <fullName>TR1__Account_Period</fullName>
        <active>true</active>
        <label>Account Period</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Closing_Report_Period</fullName>
        <active>true</active>
        <label>Closing Report Period</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Expense_Period</fullName>
        <active>true</active>
        <description>Acc:11/20:W-008786 Created For Tie Rates To Expenses.</description>
        <label>Expense Period</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Job_Period</fullName>
        <active>true</active>
        <label>Job Period</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__TImesheet_Period</fullName>
        <active>true</active>
        <label>TImesheet Period</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>